<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="button_start_session">Iniciar sesión</string>
    <string name="button_sign_up">Registrar</string>
    <string name="text_create_account">Si aún no tienes cuenta, regístrate aquí</string>
    <string name="text_go_login">Si ya dispones de una cuenta, inicie sesión aquí</string>
    <string name="nickname">Nombre de usuario</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="toolbar_text_home">Inicio</string>
    <string name="toolbar_text_favs">Favoritos</string>
    <string name="toolbar_text_profile">Perfil</string>
    <string name="do_tweet">Twittear</string>
    <string name="whats_happening">¿Qué está pasando?</string>
    <string name="accept">Aceptar</string>
    <string name="exit">Salir</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="delete_tweet">Eliminar Tweet</string>
    <string name="actual_pass">Contraseña actual</string>
    <string name="save">Guardar</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="website">Website</string>
    <string name="description_profile">Descripción e intereses</string>


</resources>
